Added additional method to try something out